name:                gremlin-haskell
version:             0.1.0.0
synopsis:            Graph database client for TinkerPop3 Gremlin Server
description:         Please see README.md
homepage:            http://github.com/nakaji-dayo/gremlin-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Daishi Nakajima
maintainer:          nakaji.dayo@gmail.com
copyright:           2015 Daishi Nakajima
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.TinkerPop
  extensions:          OverloadedStrings
                       QuasiQuotes
                       TemplateHaskell
  build-depends:       base >= 4.7 && < 5
                     , text
                     , websockets
                     , aeson
                     , aeson-qq
                     , mtl
                     , stm
  default-language:    Haskell2010

executable gremlin-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  extensions:          OverloadedStrings
  build-depends:       base
                     , gremlin-haskell
  default-language:    Haskell2010

test-suite gremlin-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  extensions:          OverloadedStrings
                       QuasiQuotes
  build-depends:       base
                     , gremlin-haskell
                     , aeson-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nakaji-dayo/gremlin-haskell
